turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:6: error: not found: value Colors
    if (getCouleurSol()==Colors(i))
                         ^LangtonsAnt:8: error: not found: value Colors
      setCouleurBrosse(Colors((i+1)%colors.length))
                       ^